# catboost_inference_exp_model

./: .gitignore  Makefile  docker-compose.yaml  dvc.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.dvc/: config
data/: .gitignore
resources/configs/: params.yaml
src/: constants.py  params.py  train_eval_model.py
